           out archiver error messages, step into hidden archives,...)

    --architecture-- refactoring in the useractions, see CVSNEWS

    CHANGED: Shortcuts are now exported in as plaintext, legacy import still works.
    CHANGED: UserActions are now managed with ActionMan. In Konfigurator
           you can change settings _about_ useractions.

    FIXED: KeyDialog: alternative shortcuts are ex-/imported as well
    FIXED: KeyDialog: canceling the dialog undoes import
    FIXED: ActionMan: creating a new actions doesn't seem to modify the current
    FIXED: ActionMan: Save modifications on current action
    FIXED: [Debian: 378138] Changed the location of the .desktop-files to match
           freedesktop.org's standards
    FIXED: Useractions: outputcollections works again
    FIXED: inconsistences and possible memoryleaks in useractions
           (thanks to Jiri Palacek)
    FIXED: Nice shutdown at SIGTERM,SIGHUP,SIGQUIT (thanks toJiri Palacek)
    FIXED: QLayout warnings in ListPanel (patch by Jiri Palecek)
    FIXED: memory leaks in KRpermHandler (patch by Jiri Palecek)
    FIXED: shutdown bugs (thanks to Jiri Palacek)
    FIXED: const char * compiler warnings removed (patch by Jiri Palecek)
    FIXED: memory leaks in KrDetailedView (patch by Jiri Palecek)
    FIXED: terminal emulator sends the CD commands too frequently
    FIXED: terminal emulator scrolls up its content after hide/show
    FIXED: [ 1501740 ] can not link from a search result's virtfs
    FIXED: rare compile problem where exit() isn't defined
    FIXED: [ 1519955 ] wrong permission handling in vfs::vfs_calcSpaceLocal
    FIXED: viewer gives back the focus to the search/locate widgets after ESC
    FIXED: problems with local directory names containing '@' character
    FIXED: security: sometimes the passwords are stored in cleartext in bookmarks.xml
    FIXED: cannot close Krusader when "menubar on top of the screen" is chosen