@@ -38,6 +38,7 @@
     CHANGED: UserActions are now managed with ActionMan. In Konfigurator
            you can change settings _about_ useractions.
 
+    FIXED: Konfigurator layout: should fit into 800x600 again
     FIXED: KeyDialog: alternative shortcuts are ex-/imported as well
     FIXED: KeyDialog: canceling the dialog undoes import
     FIXED: ActionMan: creating a new actions doesn't seem to modify the current
